--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
 </head>
 
 <body>
-    <table id="field">
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
-    
+    <div class="table-wrapper">
+        <select name="" id="" class="select-size">
+            <option value="max">max</option>
+            <option value="min">min</option>
+        </select>
+
+        <table class="field">
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
     <script src="script/script.js"></script>
 </body>
