--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
         <select name="" id="" class="select-size">
             <option value="max">max</option>
             <option value="min">min</option>
+            <option value="random">random</option>
         </select>
 
+        <div class="step">
+            <i>Сейчас ход:</i></br>
+            <span>X</span>
+        </div>
         <table class="field">
             <tr>
                 <td></td>
